# esercizi

./: 0+.c  0+.out  1.c  10.c  11.c  12.out  13.c  14.c  2.c  3.out  4.out  6.c  6.out  7.c  7.out  9.c  array-fibonacci.out  array2.c  array_aa.out  cerchio.out  ciframax_roco.c  countdoppie.c  cy-stringa  diff_max.c  div-5-7.c  divisori-cifren-y.c  divisori-xy.c  doppie_rico.c  es1_easame_2012  es1_easame_2012.out  esempio.c  file1.out  fmultipli.c  fmultipli.out  frazione-somma.c  fz_array.c  hello.out  lati-triangolo.out  main.c  n-cifre-pari.c  (+30 more)
c/: 1  1.out  12.c  13.out  15.c  16.c  17.c  17.out  18_3  2.out  3.c  3punt.c  3punt.out  4.c  5.c  5.out  8.c  CMakeLists.txt  array-fibonacci.c  array1.c  array1.out  array2.out  array_aa.c  array_e  array_e.c  array_e2  array_e2.c  c_succ.c  c_succ.out  cerchio.c  cy-stringa.c  diff_max.out  div-5-7.out  divisione_rico.c  divisori-cifren-y.out  es1_easame_2012.c  f-divisori.c  f-frazione-somma.c  file1.c  file2  (+59 more)
c/esercizi_guidati/: array-funz.c  array-funz.out  conta_num.c  count-s.c  f.punt2.c  funzioni1.c  lista.c  matrice1.c  media-sottomatrice.c  puntatori1.c  puntatori1.out  stringa1.c
c/file/: canzone.txt  dizionario.txt  man_libreria_string.txt  origin.txt
c/quiz/: 18_3.c  parziale_g3.c  quiz10_1  quiz10_1.c  quiz11.c  quiz11.out  quiz12.c  quiz12.out  quiz14.c  quiz14.out  quiz15.c  quiz16.c  quiz17_1.c  quiz17_2.c  quiz17_3.c  quiz18_1.c  quiz18_2.c  quiz18_3.c  quiz4_1.c  quiz5_1.out  quiz6_1.c  quiz7.out  quiz8.out  quizn_1.c  quizn_1.out  sim1_1.c  sim1_2.out  sim1_3.c  sim1_3.out  sim2_3.c  sim3_1.c  (+3 more)
(+52 files in other folders)
