cmake_minimum_required(VERSION 3.27)
project(untitled1 C)

set(CMAKE_C_STANDARD 11)

add_executable(untitled1 main.c
        divisione_rico.c
        restodiv_rico.c
        ciframax_roco.c
        doppie_rico.c
        countdoppie.c
        palindroma_rico.c
        monotona_rico.c
        ordinamento.c)
