cmake_minimum_required(VERSION 3.27)
project(untitled1 C)

set(CMAKE_C_STANDARD 11)

add_executable(untitled1 main.c
        divisione_rico.c
        restodiv_rico.c
        ciframax_roco.c
        doppie_rico.c
        countdoppie.c
        palindroma_rico.c
        monotona_rico.c
        ordinamento.c
        esercizi_guidati/conta_num.c
        esercizi_guidati/lista.c
        liste1.c
        liste2.c
        liste3.c
        lista4e.c
        liste5e.c
        quiz/sim3_2.c
        quiz/sim3_3.c
        quiz/quiz16.c
        quiz/quiz17_1.c
        quiz/quiz17_2.c
        quiz/quiz17_3.c
        quiz/quiz18_1.c
        quiz/quiz18_2.c
        quiz/quiz18_3.c
        quiz/18_3.c
        array_e.c
        array_e2.c
)
